--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 flask = "^3.0.3"
+sqlalchemy = "^2.0.35"
+requests = "^2.32.3"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
